# tution2023

./: 27032023.org  lesson_06032023.org  lesson_06042023.org  lesson_09032023.org  lesson_14022023.org  lesson_14032023.org  lesson_16022023.org  lesson_21022023.org  lesson_21032023.org  lesson_23032023.org  lesson_28022023.org  lesson_29032023.org  lesson_31032023.org  readme.org
06032023/: lesson.py
06042023/: agents.py  pyproject.toml  simulation.py
14032023/: test.py
21022023/: test_21022023.py
21032023/: test.py
28022023/tstprj/: Dockerfile  docker-compose.yml  manage.py  requirements.txt
28022023/tstprj/accounts/: admin.py  models.py  views.py
28022023/tstprj/accounts/migrations/: 0001_initial.py  0002_alter_accounts_modification_date_moneymovement.py  0003_alter_accounts_modification_date_and_more.py
28022023/tstprj/accounts/templates/: accounts_list.abs  accounts_list.html
28022023/tstprj/accounts/templates/accounts/: accounts_list.html
28022023/tstprj/tstprj/: asgi.py  settings.py  urls.py  wsgi.py
28022023/tstprj/tstprj/templates/: index.html
